0.6.5/_sources/gallery/surface_timeseries.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/surface_timeseries.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_surface_timeseries.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_surface_timeseries.py:


Surface timeseries
==================

Display a surface timeseries using data from nilearn

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 9-47



.. image-sg:: /gallery/images/sphx_glr_surface_timeseries_001.png
   :alt: surface timeseries
   :srcset: /gallery/images/sphx_glr_surface_timeseries_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    [fetch_surf_nki_enhanced] Added README.md to /home/runner/nilearn_data
    [fetch_surf_nki_enhanced] Dataset created in 
    /home/runner/nilearn_data/nki_enhanced_surface
    [fetch_surf_nki_enhanced] Downloading data from 
    https://www.nitrc.org/frs/download.php/8470/pheno_nki_nilearn.csv ...
    [fetch_surf_nki_enhanced]  ...done. (1 seconds, 0 min)

    [fetch_surf_nki_enhanced] Downloading data from 
    https://www.nitrc.org/frs/download.php/8261/A00028185_rh_preprocessed_fsaverage5
    _fwhm6.gii ...
    [fetch_surf_nki_enhanced] Downloaded 27516928 of 42412120 bytes (64.9%%,    0.5s
    remaining)
    [fetch_surf_nki_enhanced]  ...done. (2 seconds, 0 min)

    [fetch_surf_nki_enhanced] Downloading data from 
    https://www.nitrc.org/frs/download.php/8260/A00028185_lh_preprocessed_fsaverage5
    _fwhm6.gii ...
    [fetch_surf_nki_enhanced] Downloaded 28196864 of 42402060 bytes (66.5%%,    0.5s
    remaining)
    [fetch_surf_nki_enhanced]  ...done. (2 seconds, 0 min)







|

.. code-block:: Python

    from importlib.metadata import version

    from nilearn import datasets, surface
    from packaging.version import parse

    import napari

    if parse(version("numpy")) >= parse('1.24') and parse(version("nilearn")) < parse('0.10.1'):
        raise RuntimeError(
            'Incompatible numpy version. '
            'You must have numpy less than 1.24 for nilearn 0.10.1 and below to '
            'work and download the example data'
        )


    # Fetch datasets - this will download dataset if datasets are not found
    nki_dataset = datasets.fetch_surf_nki_enhanced(n_subjects=1)
    fsaverage = datasets.fetch_surf_fsaverage()

    # Load surface data and resting state time series from nilearn
    brain_vertices, brain_faces = surface.load_surf_data(fsaverage['pial_left'])
    brain_vertex_depth = surface.load_surf_data(fsaverage['sulc_left'])
    timeseries = surface.load_surf_data(nki_dataset['func_left'][0])
    # nilearn provides data as n_vertices x n_timepoints, but napari requires the
    # vertices axis to be placed last to match NumPy broadcasting rules
    timeseries = timeseries.transpose((1, 0))

    # create an empty viewer
    viewer = napari.Viewer(ndisplay=3)

    # add the mri
    viewer.add_surface((brain_vertices, brain_faces, brain_vertex_depth), name='base')
    viewer.add_surface((brain_vertices, brain_faces, timeseries),
                        colormap='turbo', opacity=0.9,
                        contrast_limits=[-1.5, 3.5], name='timeseries')

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_surface_timeseries.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: surface_timeseries.ipynb <surface_timeseries.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: surface_timeseries.py <surface_timeseries.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: surface_timeseries.zip <surface_timeseries.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
